# azure_poster

./: .gitignore  Makefile  README.md  com.vmgabriel.azure_poster.desktop  com.vmgabriel.azure_poster.xml  com.vmgabriel.azure_poster.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
scripts/: pat_validation.py
src/: main.py
src/core/: azure_client.py  config_manager.py  constants.py
src/ui/: app.py
tests/core/: test_azure_client.py  test_config_manager.py
tests/ui/: test_app.py
